Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
- portal_layouts know how to render/validate a layout/schema
Bug fixes:
~~~~~~~~~~
-
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
- Use tuples for vocabularies export